@@ -518,6 +518,14 @@ Some variables function as toggles (On/Off).  Unless otherwise noted 0 is Off an
 	</td>
 </tr>
 <tr>
+	<td bgcolor="#ddddff">
+		$g_show_bug_project_links
+	</td>
+	<td bgcolor="#ffffff">
+		Show project links when in All Projects mode.
+	</td>
+</tr>
+<tr>
 	<td colspan="2" bgcolor="#eeeeee">
 		Users can set their own default preferences for the show report/update/view preferences but these settings should override those preferences.  These settings affect all projects.
 	</td>
