@@ -31,6 +31,7 @@ Mantis
  * Added Anonymous Login patch.
  * Added CVS linking patch.
  * Added g_hide_closed_default for filter defaults.
+ * Added g_show_bug_project_links to toggle project links in All Project mode.
 
 
 01.23.2002  -   0.17.0
